# gmaps-scraper

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  PROJECT_LOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
context/: ai-workflow-rules.md  architecture.md  code-standards.md  discovery-scheduler-plan.md  interface-context.md  progress-tracker.md  project-overview.md
docs/: bitter-lesson-audit.md  bitter-lesson-implementation.md  content-fetching.md  rpc-reference.md
docs/references/: google-maps-scraper-benchmark.md
scripts/: benchmark_scheduler.py  compare_fields.py  count.py  e2e_live_test.py  grid_nyc_full.py  inspect_data.py  recall_floor.py  scrape_5k_test.py  scrape_5k_v2.py  test_place_details.py  test_scraped_only.py
src/gmaps/: __init__.py  _places.py  _reviews.py  _search.py  cli.py  client.py  collection.py  contacts.py  control.py  coverage.py  evaluation.py  exceptions.py  fetchers.py  geocoding.py  grid.py  healing.py  identity.py  mcp_server.py  registry.py  schema.py  stats.py  transport.py  validation.py  website.py
src/gmaps/_auth/: __init__.py  session.py
src/gmaps/rpc/: __init__.py  decoder.py  encoder.py  parser.py  pb_encoder.py  types.py
tests/: test_auth_session.py  test_cli.py  test_client.py  test_collection.py  test_contacts.py  test_control.py  test_coverage.py  test_decoder.py  test_evaluation.py  test_fetchers.py  test_geocoding.py  test_golden.py  test_grid.py  test_grid_search.py  test_healing.py  test_identity.py  test_mcp_server.py  test_parser.py  test_registry.py  test_schema.py  test_transport.py  test_validation.py  test_website.py
tests/golden/: search_expected.json  search_raw.json
