[project]
name = "gmaps-scraper"
version = "0.1.0"
description = "Unofficial Python client for Google Maps using reverse-engineered internal RPC API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Max"}
]
keywords = ["google-maps", "scraper", "places", "reviews", "reverse-engineer", "internal-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27.0,<0.29",
    "click>=8.0.0,<9",
    "rich>=13.0.0,<16",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0,<2"]
mcp = ["mcp>=0.9.0,<2"]
dev = [
    "pytest>=8.0.0,<10",
    "pytest-asyncio>=0.23.0,<2",
    "pytest-httpx>=0.30.0,<1",
    "python-dotenv>=1.0.0,<2",
    "mypy>=1.0.0,<3",
    "ruff>=0.4,<1",
]

[project.scripts]
gmaps = "gmaps.cli:main"

[project.urls]
Documentation = "https://github.com/nick-choudhary/gmaps-scraper#readme"
Issues = "https://github.com/nick-choudhary/gmaps-scraper/issues"
Repository = "https://github.com/nick-choudhary/gmaps-scraper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmaps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
